# serializer version: 1
# name: test_connect
  [local >]
  00000000  00 00 00 15 31 2e 30 00 00 00 01 00 00 23 82 68  |....1.0......#.h|
  00000010  a6 a2 24 00 00 e6 b9 24 63                       |..$....$c|
  [local <]
  00000000  00 00 00 27 31 2e 30 00 00 00 01 00 00 00 17 68  |...'1.0........h|
  00000010  a6 a2 23 00 01 00 10 cb 93 c7 39 b9 21 53 43 48  |..#.......9.!SCH|
  00000020  83 b3 c2 af 0f 51 2c da 9e ea 3b                 |.....Q,...;|
# ---
# name: test_l01_session
  [local >]
  00000000  00 00 00 15 31 2e 30 00 00 00 01 00 00 23 82 68  |....1.0......#.h|
  00000010  a6 a2 24 00 00 e6 b9 24 63                       |..$....$c|
  [local <]
  00000000  00                                               |.|
  [local >]
  00000000  00 00 00 15 4c 30 31 00 00 00 01 00 00 23 82 68  |....L01......#.h|
  00000010  a6 a2 25 00 00 ee 2f 30 e8                       |..%.../0.|
  [local <]
  00000000  00 00 00 29 4c 30 31 00 00 00 01 00 00 00 17 68  |...)L01........h|
  00000010  a6 a2 23 00 01 00 12 a0 4a ec 75 88 03 75 0f d2  |..#.....J.u..u..|
  00000020  40 33 69 02 f4 71 50 72 f3 81 56 80 f4           |@3i..qPr..V..|
  [local >]
  00000000  00 00 00 3e 4c 30 31 00 00 00 7b 00 00 23 83 68  |...>L01...{..#.h|
  00000010  a6 a2 26 00 65 00 27 9e fd c2 42 b7 01 b4 eb 9c  |..&.e.'...B.....|
  00000020  00 84 4f fd 51 1f bc a5 65 12 c2 dc 45 0e 21 cb  |..O.Q...e...E.!.|
  00000030  45 dc bb 0a ba 16 84 28 a7 33 e5 e2 fa a8 f1 f2  |E......(.3......|
  00000040  ec f4                                            |..|
  [local <]
  00000000  00 00 00 37 4c 30 31 00 00 00 7b 00 00 00 17 68  |...7L01...{....h|
  00000010  a6 a2 27 00 66 00 20 b7 72 49 8a 64 eb 16 a5 71  |..'.f. .rI.d...q|
  00000020  73 eb 9e 7e 37 64 3e 75 c0 70 ea 39 4e de 82 1f  |s..~7d>u.p.9N...|
  00000030  e2 29 86 de 4a 7b 38 20 55 12 8a                 |.)..J{8 U..|
# ---
# name: test_send_command
  [local >]
  00000000  00 00 00 15 31 2e 30 00 00 00 01 00 00 23 82 68  |....1.0......#.h|
  00000010  a6 a2 24 00 00 e6 b9 24 63                       |..$....$c|
  [local <]
  00000000  00 00 00 27 31 2e 30 00 00 00 01 00 00 00 17 68  |...'1.0........h|
  00000010  a6 a2 23 00 01 00 10 cb 93 c7 39 b9 21 53 43 48  |..#.......9.!SCH|
  00000020  83 b3 c2 af 0f 51 2c da 9e ea 3b                 |.....Q,...;|
  [local >]
  00000000  00 00 00 37 31 2e 30 00 00 00 7b 00 00 23 83 68  |...71.0...{..#.h|
  00000010  a6 a2 25 00 65 00 20 91 5b 1f 43 34 d5 22 47 9f  |..%.e. .[.C4."G.|
  00000020  59 4e 45 53 85 f9 c6 6e f2 eb 27 eb 6d 03 d8 92  |YNES...n..'.m...|
  00000030  5b 30 83 b4 a4 ea f5 85 be 38 57                 |[0.......8W|
  [local <]
  00000000  00 00 00 37 31 2e 30 00 00 00 7b 00 00 00 17 68  |...71.0...{....h|
  00000010  a6 a2 26 00 66 00 20 07 8b 28 60 a8 08 18 12 47  |..&.f. ..(`....G|
  00000020  05 20 3e f5 53 e3 fd 4a cc 03 72 7b b4 2c d9 84  |. >.S..J..r{.,..|
  00000030  7f 4b 18 d8 76 7d 5c 65 87 7c 2d                 |.K..v}\e.|-|
# ---
